# readaloud

./: CONTRIBUTING.md  README.md  install.sh  pyproject.toml  uninstall.sh  voices.lock.json
examples/: speak-selection-wayland  speak-selection-x11
packaging/systemd/: readaloud.service
scripts/: bootstrap-uv.sh
src/readaloud/: __init__.py  audio.py  cli.py  config.py  daemon.py  engine.py  normalize.py  paths.py  piper_runtime.py  protocol.py  voices.py
tests/: test_audio.py  test_config.py  test_engine.py  test_piper_runtime.py  test_protocol.py  test_server.py
