[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "readaloud"
version = "0.1.0"
description = "Persistent local Piper text-to-speech service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Readaloud contributors" }]
dependencies = [
  "piper-tts==1.4.2",
]

[project.scripts]
readaloud = "readaloud.cli:main"
readaloudd = "readaloud.daemon:main"

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/readaloud"]

[tool.hatch.build.targets.wheel.force-include]
"voices.lock.json" = "readaloud/voices.lock.json"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
